# MyAirHat

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: OBS_MyAirHat Fabrication.docx  myairhat-fabrication.md  technical-package-outline.md
src/myairhat/: __init__.py  __main__.py  main.py
